--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/image_labeling_button"
@@ -16,5 +16,16 @@
         android:textAllCaps="true"
         android:textSize="20dp"
         android:text="Image Labeling"/>
+
+    <Button
+        android:id="@+id/smart_reply_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/image_labeling_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAllCaps="true"
+        android:textSize="20dp"
+        android:text="Smart Reply"/>
 
 </android.support.constraint.ConstraintLayout>
